--- a/src/Components/Contactme.css
+++ b/src/Components/Contactme.css
@@ -41,6 +41,7 @@
     border-radius: 1em;
     box-shadow: 0 0 1em rgba(0,0,0,.5);
     min-width: 250px;
+    max-width: 850px;
 
    
 }
@@ -91,7 +92,7 @@
     border-radius: 1em;
     box-shadow: 0 0 1em rgba(0,0,0,.5);
     color: rgba(255, 255, 255, 0.7);
-    height: 50%;
+    
     align-self: center;
 }
 
