--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -2,14 +2,14 @@
   position: fixed;
   width: 20%;
   height: 100%;
-  
+  background-color:rgb(0,0,0)
 }
 
 .navcontainer {
   display: flex;
   flex-direction: column;
-  height: 100%;
-  background-color:rgb(0,0,0) ;
+  height: 80%;
+  
   
 }
 
